Fix table alignment

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -44,6 +44,7 @@ tbody tr:hover {
 thead {
   background-color: var(--bluegray-600);
   color: white;
+  text-align: left;
 }
 
 th,
